add RoomId
